# todo-rs

./: Cargo.toml  LICENSE  README.md
.github/scripts/: prepare_executables.sh
.github/workflows/: CD.yml  CI.yml  deploy.yml
cli/: Cargo.toml
cli/src/: args.rs  commands.rs  lib.rs  main.rs
cli/src/commands/: crud.rs  mod.rs  task.rs
config/: config.json
core/: Cargo.toml
core/src/: config.rs  context.rs  id.rs  lib.rs
core/src/infrastructure/: mod.rs
core/src/infrastructure/storage_repos/: mod.rs
core/src/infrastructure/storage_repos/json_repo/: board_json_repo.rs  mod.rs
core/src/infrastructure/storage_repos/storage/: local_storage.rs  mod.rs
core/src/model/: board.rs  task.rs
core/src/model/.schema/: board.json  id.json  task.json
core/src/repositories/: board_repo.rs  mod.rs
data/: board.json
data/schema/: board.json
src/: cli.rs  lib.rs  main.rs
src/cli/: args.rs
src/infrastructure/: mod.rs  storage.rs
src/infrastructure/repository/: board_repo.rs  mod.rs
src/infrastructure/storage/: local_storage.rs
src/model/: board.rs  task.rs
