[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"
default-run = "todo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version =  "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

todo-rs-core = { path = "../core" }