[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"
default-run = "todo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version =  "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
cli-table = { version = "0.4", features = ["derive"] }
ascii_table = { version = "4.0.2", features = ["wide_characters"] }

todo-rs-core = { path = "../core" }