[package]
name = "todo-rs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version =  "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
tiny_id = "0.1.5"